# loop-insights

./: .dockerignore  .env.example  .gitignore  Dockerfile  NOTES.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  models.py  service.py
app/api/: main.py
app/github/: client.py
app/llm/: grounding.py  judge.py  narrative.py  provider.py
app/metrics/: collaboration.py
app/store/: cache.py
eval/: cases.py  run_eval.py
tests/: test_api.py  test_grounding.py  test_metrics.py
